fix alignment of non-Icon ToggleItems
Enyo-DCO-1.1-Signed-off-by: Ryan Duffy (ryan.duffy@lge.com)

--- a/packages/moonstone/Item/Overlay.less
+++ b/packages/moonstone/Item/Overlay.less
@@ -7,11 +7,11 @@
 	.overlay {
 		line-height: 1;
 
-		&.before :first-child {
+		&.before > :first-child {
 			.margin-start-end(0, @moon-icon-margin);
 		}
 
-		&.after :last-child {
+		&.after > :last-child {
 			.margin-start-end(@moon-icon-margin, 0);
 		}
 
